# hfx

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  HFX_SPEC.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
adapters/: README.md
adapters/_template/: README.md  WORKFLOW.md  build_adapter.py  pyproject.toml
adapters/grit/: GRIT_HFX_SPEC_VALIDATION.md  README.md  WORKFLOW.md  build_grit_eu_hfx.py  pyproject.toml
adapters/merit/: README.md  WORKFLOW.md  build_adapter.py  build_global_rasters.py  merge_basins.py  pyproject.toml  run_missing_basins.py  test_build_adapter.py
conformance/: README.md  generate_fixtures.py
conformance/invalid/: README.md
conformance/invalid/crs-mismatch/: README.md  manifest.json
conformance/invalid/dangling-upstream-ref/: README.md  graph.arrow  manifest.json
conformance/valid/: README.md
conformance/valid/tiny/: README.md  catchments.parquet  graph.arrow
crates/core/: Cargo.toml
crates/hfx-core/: CHANGELOG.md  Cargo.toml  README.md
crates/hfx-core/src/: area.rs  catchment.rs  geo.rs  graph.rs  id.rs  lib.rs  manifest.rs  raster.rs  snap.rs
crates/hfx-validator/: Cargo.toml  README.md
crates/hfx-validator/src/: dataset.rs  diagnostic.rs  lib.rs  main.rs  report.rs
crates/hfx-validator/src/check/: file_presence.rs  geometry.rs  graph.rs  ids.rs  manifest.rs  mod.rs  raster.rs  referential.rs  schema.rs  values.rs
crates/hfx-validator/src/reader/: catchments.rs  graph.rs  manifest.rs  mod.rs  raster.rs  schema.rs  snap.rs
crates/hfx-validator/tests/: conformance_fixtures.rs  integration.rs
docs/: ADAPTER_GUIDE.md
docs/decisions/: 2026-04-13-post-grit-open-items.md  README.md
examples/: README.md
schemas/: manifest.schema.json
scripts/: README.md  bump-version.sh
spec/: CHANGELOG.md  HFX_SPEC.md  README.md
