[workspace]
members = ["crates/hfx-core", "crates/hfx-validator"]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CooperBigFoot/hfx"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parquet = { version = "54", default-features = false, features = ["arrow", "zstd", "snap", "lz4", "flate2"] }
arrow = { version = "54", default-features = false, features = ["ipc"] }
clap = { version = "4", features = ["derive"] }
tiff = "0.9"
geozero = { version = "0.14", default-features = false, features = ["with-wkb"] }
rand = "0.8"
