[package]
name = "hfx-validator"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
hfx-core = { path = "../hfx-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
parquet.workspace = true
arrow.workspace = true
clap.workspace = true
tiff.workspace = true
geozero.workspace = true
rand.workspace = true
