[package]
name = "hfx-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI and library for validating HFX (HydroFabric Exchange) datasets."
readme = "README.md"
keywords = ["hydrology", "hydrofabric", "validation", "watershed", "cli"]

[[bin]]
name = "hfx"
path = "src/main.rs"

[dependencies]
hfx-core = { path = "../hfx-core", version = "=0.2.19" }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
parquet.workspace = true
arrow.workspace = true
clap.workspace = true
tiff.workspace = true
geozero.workspace = true
rand.workspace = true
gdal.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
